# LabScan

./: .gitignore  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml  cross-platform.yml
admin/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
admin/src/: App.tsx  index.css  main.tsx
admin/src-tauri/: Cargo.toml  tauri.conf.json
admin/src-tauri/capabilities/: default.json
admin/src-tauri/icons/: icon.icns
admin/src-tauri/src/: database.rs  discovery.rs  logger.rs  main.rs  server.rs
admin/src/components/dashboard/: ActivityFeed.tsx  MetricCard.tsx  SystemHealth.tsx  ThreatSummary.tsx
admin/src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopStatusBar.tsx
admin/src/components/network/: LabscanNode.tsx  LabscanOrthogonalEdge.tsx  NetworkMapFlow.tsx
admin/src/lib/: labscan.tsx  logger.ts
admin/src/pages/: Alerts.tsx  Dashboard.tsx  Devices.tsx  Logs.tsx  NetworkMap.tsx  NotFound.tsx  Settings.tsx  Tasks.tsx
agent/: Makefile  README.md  go.mod  main.go
